# CompresseuZone-bot

./: .dockerignore  .gitignore  Dockerfile  README.md  bot.py  bot_compress.py  pyproject.toml  requirements.txt
