[project]
name = "compress-bot-telegram"
version = "0.1.0"
description = "Telegram bot for video compression"
authors = [
    {name = "SamsonHyacinth",email = "samsonsanou@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
python-telegram-bot = "^22.1"
ffmpeg-python = "^0.2.0"
flask = "^3.1.1"
gunicorn = "^23.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
